# SelfDrivingRobot

./: .gitignore  CMakeLists.txt  README.md
Sourcefiles/Include/: chromosome.h  configuration.h  debugger.h  logger.h  maze.h  menus.h  pythonChecker.h  robot.h  rotation.h  sims.h  tracking.h  types.h
Sourcefiles/Simulation/: chromosome.c  debugger.c  logger.c  main.c  maze.c  menus.c  pythonChecker.c  robot.c  robot_functions.c  robot_path.py  rotation.c  sims.c  tracking.c
analysis/: heatmap_generator.py
